basic site template

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@ sites/www.earthboxinn.com
 sites/www.visitsanjuans.com
 sites/www.birdrockhotel.com
 sites/www.swiftsuremarketing.com
+.gitignore
+.htaccess
 DS_Store
