--- a/sites/.gitignore
+++ b/sites/.gitignore
@@ -3,3 +3,6 @@ www.visitsanjuans.com
 www.birdrockhotel.com
 www.swiftsuremarketing.com
 www.mpt.com
+www.fishingbear.com
+www.northalaska.com
+www.wendymccauley.com
