robots.txt module

--- a/sites/.gitignore
+++ b/sites/.gitignore
@@ -5,7 +5,8 @@ www.swiftsuremarketing.com
 www.mpt.com
 www.fishingbear.com
 www.northalaska.com
-www.wendymccauley.com
+www.wendybuffum.com
 sites.php
 www.mccauleygallery.com
 www.galleryguide.com
+www.rocheharbor.com
