--- a/sites/.gitignore
+++ b/sites/.gitignore
@@ -11,4 +11,7 @@ www.galleryguide.com
 www.rocheharbor.com
 www.danaroberts.com
 www.travelsanjuan.com
+www.barestarter.com
+www.danaroberts.com
+www.*.com
 
